# rust-service

./: .gitignore  .lunar-test  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  pantalasa.json
.agents/plans/: EXAMPLE.md
.argocd/: application.yaml
.github/workflows/: ci.yml  release.yml
deploy/terraform/: main.tf
docs/: dr-plan.md
docs/dr-exercises/: 2026-05-15.md
security/: README.md  trivy-rescan.json
vendor-libs/crypto-helper/: LICENSE
