[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scheduler-lib = { path = "vendor-libs/scheduler-lib" }
date-utils = { path = "vendor-libs/date-utils" }
crypto-helper = { path = "vendor-libs/crypto-helper" }
hyper = "0.14.18"
tokio = { version = "1.17.0", features = ["full"] }
regex = "1.5.4"
chrono = "0.4.19"

[dev-dependencies]
assert_cmd = "2.0"
